<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cut_card_background"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="12dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_text"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/calculadora"
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:src="@drawable/calc" />

                <Button
                    android:id="@+id/calc_btn"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:clickable="false"
                    android:linksClickable="false"
                    android:longClickable="false"
                    android:onClick="btSelect"
                    android:text="@string/calculadora"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/tabela_imc"
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:src="@drawable/imc" />

                <Button
                    android:id="@+id/tabela_btn"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/tabela_imc" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/saiba_mais"
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:src="@drawable/saibamais" />

                <Button
                    android:id="@+id/mais_btn"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/saiba_mais" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/informações"
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:src="@drawable/creat_account" />

                <Button
                    android:id="@+id/creat_btn"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:onClick="btSelect"
                    android:text="@string/creat_acc" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>

    </RelativeLayout>
